--- a/08/form.css
+++ b/08/form.css
@@ -16,74 +16,121 @@ body{
 .invalid{
     border: 4px solid red;
 }
+#setLoginBtn{
+    background-color: lightblue;
+    height: 30px;
+    width: 110px;
+    font-size: 25px;
+    outline: none; 
+}
+#setRegisterBtn{
+    background-color: lightblue;
+    height: 30px;
+    width: 110px;
+    font-size: 25px;
+    outline: none; 
+}
 
-#ageInput{
-    height: 30px;
-    width: 180px;
-    font-size: 25px;
-    color: green;
-    outline: none;
-    margin: 5px 20px 5px 20px;
-}
-#nameInput{
-    height: 30px;
-    width: 180px;
-    font-size: 25px;
-    color: green;
-    outline: none;
-    margin: 5px 20px 5px 20px;
-}
-#loginInput{
-    height: 30px;
-    width: 180px;
-    font-size: 25px;
-    color: green;
-    outline: none;
-    margin: 20px 20px 5px 20px;
-}
 #emailInput{
     height: 30px;
-    width: 180px;
-    font-size: 25px;
-    color: green;
-    outline: none;
-    margin: 5px 20px 5px 20px;
-}
-
-#cityInput{
-    height: 30px;
-    width: 180px;
-    font-size: 25px;
-    color: green;
+    width: 220px;
+    font-size: 15px;
+    color:green;
     outline: none;
     margin: 5px 20px 5px 20px;
 }
 #passwordInput{
     height: 30px;
-    width: 180px;
+    width: 220px;
+    font-size: 15px;
+    color: green;
+    outline: none;
+    margin: 5px 20px 5px 20px;
+} 
+#message{
+    height: 150px;
+    width: 370px;
+    margin-top: 50px;
+    margin-left: 50px;
+    text-align: center;
+    font-size: 40px;
+    color: red;
+}
+
+#age{
+    height: 30px;
+    width: 220px;
     font-size: 25px;
     color: green;
     outline: none;
     margin: 5px 20px 5px 20px;
 }
-#repeatPasswordInput{
+#name{
     height: 30px;
-    width: 180px;
+    width: 220px;
+    font-size: 25px;
+    color: green;
+    outline: none;
+    margin: 5px 20px 5px 20px;
+}
+#login{
+    height: 30px;
+    width: 220px;
+    font-size: 25px;
+    color: green;
+    outline: none;
+    margin: 20px 20px 5px 20px;
+}
+#email{
+    height: 30px;
+    width: 220px;
+    font-size: 25px;
+    color: green;
+    outline: none;
+    margin: 5px 20px 5px 20px;
+}
+
+#city{
+    height: 30px;
+    width: 220px;
+    font-size: 25px;
+    color: green;
+    outline: none;
+    margin: 5px 20px 5px 20px;
+}
+#password{
+    height: 30px;
+    width: 220px;
+    font-size: 25px;
+    color: green;
+    outline: none;
+    margin: 5px 20px 5px 20px;
+}
+#repeatPassword{
+    height: 30px;
+    width: 220px;
     font-size: 25px;
     color: green;
     outline: none;
     margin: 5px 20px 20px 20px;
 }
-#btn{
+#loginBtn{
+    background-color: greenyellow;
+    margin: 10px 70px 20px 70px;
+    height: 25px;
+    width: 90px;
+    font-size: 15px;
+}
+
+#registerBtn{
     background-color: greenyellow;
     margin: 10px 70px 20px 70px;
     height: 25px;
     width: 90px;
     font-size: 20px;
+
 }
-p{   
-    font-size: 20px;
-}
+
 .active-btn{
     background-attachment: blue;
 }
